# fzkernel

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  lint.yml
src/: lib.rs  main.rs
src/bios/f-init/: Cargo.toml  f-init.ld  x86_64-fbios.json
src/bios/f-init/src/: main.rs
src/bios/f-init/src/pswitch/: a20.rs  gdt.rs  mod.rs
src/bios/f-init32/: Cargo.toml  f-init32.ld  x86_64-fbios.json
src/bios/f-init32/src/: main.rs
src/bios/f-init32/src/arch/x86/: setup.S
src/bios/f-init32/src/interrupts/: handlers.rs
src/bios/f-initmbr/: Cargo.toml  f-initmbr.ld  x86_64-fbios.json
src/bios/f-initmbr/src/: main.rs
src/bios/f-macros/: Cargo.toml
src/bios/f-macros/src/: lib.rs
src/bios/flib/: Cargo.toml
src/bios/flib/src/: interrupts.rs  lib.rs
src/bios/flib/src/bios/: smbios.rs
src/bios/flib/src/boot/linux/: boot_params.rs  mod.rs
src/bios/flib/src/data/: abstract.rs
src/bios/flib/src/disk_io/: disk.rs
src/bios/flib/src/gdt/: gdt.rs
src/bios/flib/src/graphics/: image.rs
src/bios/flib/src/idt/: idt.rs  mod.rs
src/bios/flib/src/int/: macros.rs  mod.rs  scheduler.rs
src/bios/flib/src/io/: io.rs  mod.rs  utils.rs
src/bios/flib/src/io/acpi/: hpet.rs  mod.rs  sdt.rs
src/bios/flib/src/io/disk/: bios.rs  mod.rs
src/bios/flib/src/io/pic/: mod.rs  pic.rs
src/bios/flib/src/io/ps2/: code.rs  mod.rs
src/bios/flib/src/mem/: e820.rs  mod.rs
src/bios/flib/src/mem/bmalloc/: heap.rs
src/bios/flib/src/part_mbr/: mod.rs  partition.rs
src/bios/flib/src/ps2/: ps2.rs
src/bios/flib/src/time/: mod.rs  rtc.rs
src/bios/flib/src/video/: io.rs
src/bios/flib/src/video/vesa/: framebuffer.rs  macros.rs  mod.rs
src/bios/flib/src/video_io/: io.rs  mod.rs  writer.rs
src/bios/flib/src/video_io/vesa/: framebuffer.rs  macros.rs  mod.rs  mode.rs  video_mode.rs
src/bios/flib/src/x86/: cpuid.rs  flags.rs  interrupts.rs  mod.rs  msr.rs  tsc.rs
src/boot/multiboot/: mb_information.rs  mod.rs
src/drivers/: mod.rs
src/drivers/acpi/: mod.rs
src/drivers/ahci/: ata_command.rs  command.rs  device.rs  fis.rs  mod.rs  port.rs
src/drivers/generics/: dev_disk.rs  mod.rs
src/drivers/ide/: ata_command.rs  ata_pio.rs  mod.rs
src/drivers/pci/: device.rs  mod.rs
src/drivers/ps2/: mod.rs
src/drivers/ps2/kbd/: keymap.rs  mod.rs  packet.rs
src/fs/: ext4.rs  fat.rs  mod.rs
src/fs/ext4/: bitmap.rs  block_grp.rs  dir.rs  extent.rs  file.rs  inode.rs  mod.rs  sb.rs
src/fs/partitions/: gpt.rs  mbr.rs  mod.rs
src/fzboot/: err.rs  mod.rs
src/fzboot/exceptions/: mod.rs  panic.rs
src/fzboot/irq/: handlers.rs  manager.rs  mod.rs
src/fzboot/kernel/: Cargo.toml  kernel.ld  x86_64-fbios.json
src/fzboot/kernel/src/: main.rs
src/fzboot/linux/: headers.rs
src/fzboot/main/: Cargo.toml  build.rs  f-init32.ld  x86_64-fbios.json
src/fzboot/main/src/: main.rs  paging.rs
src/fzboot/main/src/arch/x86/: setup.S
src/fzboot/main/src/boot/: headers.rs  mod.rs
src/fzboot/main/src/interrupts/: handlers.rs
src/fzboot/mbr/: Cargo.toml  f-initmbr.ld  x86_64-fbios.json
src/fzboot/mbr/.cargo/: config.toml
src/fzboot/mbr/src/: main.rs
src/fzboot/proc_macros/: Cargo.toml
src/fzboot/proc_macros/src/: lib.rs
src/fzboot/process/: mod.rs  thread.rs
src/fzboot/process/loader/elf/: header.rs
src/fzboot/real/: Cargo.toml
src/fzboot/real/src/: main.rs
src/fzboot/real/src/pswitch/: a20.rs  gdt.rs
src/fzboot/scheduler/: mod.rs  queue.rs  task.rs
src/fzboot/scheduler/strategies/: mod.rs  round_robin.rs
src/fzboot/time/: mod.rs  rtc.rs
src/idt/: idt.rs
src/int/: mod.rs
src/io/: mod.rs
src/io/acpi/: hpet.rs  madt.rs  mcfg.rs  mod.rs  sdt.rs
src/io/apic/: mod.rs
src/io/disk/: mod.rs
src/io/pic/: mod.rs
src/io/ps2/: mod.rs
src/mem/: e820.rs  kernel_sec.rs  mod.rs  stack.rs  utils.rs
src/mem/bmalloc/: heap.rs
src/mem/gdt/: mod.rs
src/mem/vmalloc/: kheap.rs  mod.rs  rbtree.rs
src/network/: mem.rs  mod.rs
src/network/virt/: mod.rs  queue.rs
src/time/: rtc.rs
src/video/: mod.rs
src/video/vesa/: framebuffer.rs  macros.rs  mod.rs  video_mode.rs
src/x86/: cpuid.rs  flags.rs  mod.rs  msr.rs  privilege.rs  tsc.rs  usermode.rs
src/x86/apic/: io_apic.rs  local_apic.rs  mod.rs  mp_table.rs
src/x86/descriptors/: gdt.rs  idt.rs
src/x86/idt/: mod.rs
src/x86/paging/: mod.rs
src/x86/paging/page_alloc/: frame_alloc.rs  mod.rs
src/x86/paging/page_table/: mapper.rs  mod.rs  translate.rs
src/x86/real/: Makefile  a20.S  boot.S  boot.ld  mem.S  real.S  real.ld  vesa.S
src/x86/registers/: control.rs  mod.rs
