[package]
name = "fzboot"
version = "0.1.0"
authors = ["Sacha Dupuydauby <sacha.dupuydauby@student-cs.fr>", "Raphaël Faure <raphael.faure2@student-cs.fr>"]
description = "FrozenBoot is a modern, feature-rich x86 bootloader"
edition = "2021"
workspace = "build/"

[dependencies]
bitfield = "0.14"
numtoa = "0.2"
rlibc = "1"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
modular-bitfield = "0.11"
noto-sans-mono-bitmap = "0.2"
conquer-once = { version = "0.4", default-features = false }
fzproc_macros = { path = "src/fzboot/proc_macros" }

[features]
alloc = []
real = []
