[package]
name = "f-init32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flib = { path = "../flib/", features = ["alloc"] }
conquer-once = { version = "0.4", default-features = false}

[profile.release]
opt-level = "z"
