[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fzboot = { path = "../../../", features = ["alloc"] }
fzproc_macros = { path = "../proc_macros/" }
conquer-once = { version = "0.4", default-features = false}
external-tests = {git = "https://github.com/frozenpeach-dev/debugger", optional = true}


[profile.release]
opt-level = "z"

[features]
test = ["external-tests"]