[package]
name = "main"
version = "0.1.0"
edition = "2021"
workspace = "../../../build"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fzboot = { path = "../../../", features = ["alloc"] }
fzproc_macros = { path = "../proc_macros" }
conquer-once = { version = "0.4", default-features = false}
